--- a/ui/modules/options/options.html
+++ b/ui/modules/options/options.html
@@ -2,20 +2,20 @@
 
 <md-content layout="column" class="filler" style="position: relative; background: transparent;" layout-align="start start">
 
-  <div bng-frustum-mover="left" bng-blur="true" flex layout="row" style="overflow: auto;" ng-class="{'optionsSideBarFullscreen': fullscreenOptions === true, 'optionsSideBarMinimal': fullscreenOptions !== true, }">
+  <div bng-frustum-mover="left" bng-blur="true" flex layout="row" style="overflow: auto;" ng-class="{'optionsSideBarFullscreen': fullscreenOptions === true, 'optionsSideBarControls': controlsScreen === true, 'optionsSideBarMinimal': fullscreenOptions !== true, }">
     <md-content layout="column" style="border-right:1px solid #ddd;" layout>
-      <md-button
-        ng-class="{'md-primary md-raised': (options.stateName.indexOf('options.graphics') !== -1)}"
-        ui-sref="menu.options.graphics" style="text-align:left;" bng-sound-class="bng_button_default">
-        <md-icon class="material-icons">satellite</md-icon>
-        {{:: 'ui.options.graphics' | translate}}
-      </md-button>
-
       <md-button
         ng-class="{'md-primary md-raised': (options.stateName.indexOf('options.display') !== -1)}"
         ui-sref="menu.options.display" style="text-align:left;" bng-sound-class="bng_button_default">
         <md-icon class="material-icons">desktop_windows</md-icon>
         {{:: 'ui.options.display' | translate}}
+      </md-button>
+
+      <md-button
+        ng-class="{'md-primary md-raised': (options.stateName.indexOf('options.graphics') !== -1)}"
+        ui-sref="menu.options.graphics" style="text-align:left;" bng-sound-class="bng_button_default">
+        <md-icon class="material-icons">satellite</md-icon>
+        {{:: 'ui.options.graphics' | translate}}
       </md-button>
 
       <md-button
