sync button styling update

--- a/ui/modules/vehicleconfig/partial.parts.html
+++ b/ui/modules/vehicleconfig/partial.parts.html
@@ -156,7 +156,7 @@
       <md-button ng-click="vehConf_parts.reset()" md-no-ink class="md-raised md-warn">
         {{:: 'ui.common.reset' | translate}}
       </md-button>
-      <md-button ng-hide="!vehConf_parts.isMPSession" ng-click="vehConf_parts.mpapply()" md-no-ink class="md-raised md-success">
+      <md-button ng-hide="!vehConf_parts.isMPSession" ng-click="vehConf_parts.mpapply()" md-no-ink class="md-raised md-primary">
         {{:: 'ui.common.sync' | translate}}
       </md-button>
     </div>
