More UI files + Locale EN

--- a/ui/modules/credits/credits.html
+++ b/ui/modules/credits/credits.html
@@ -40,7 +40,7 @@ html {
       </div>
     </div>
 
-    <img src="/ui/modules/credits/beamngdrive.png"" style="margin-top: 150px;">
+    <img src="/ui/modules/credits/beamngdrive.png" style="margin-top: 150px;" alt="" />
 
     <div ng-repeat="category in creditsCtrl.credits">
       <creditsCategory>{{category.translateId | translate}}</creditsCategory>
