fixes for UI locale and veh spawning

--- a/ui/entrypoints/main_0.26/index.html
+++ b/ui/entrypoints/main_0.26/index.html
@@ -113,6 +113,8 @@
   <script src="/ui/modules/fadeScreen/fadeScreen.js"></script>
   <script src="/ui/modules/atom/title/title.js"></script>
   <script src="/ui/modules/atom/card/card.js"></script>
+  <!-- --------------------------------- BEAMMP --------------------------------- -->
+<script src="/ui/modules/multiplayer/multiplayer.js"></script> 
 
   <link rel="stylesheet" type="text/css" href="/ui/lib/int/ui-components/bng-components.css">
 
