Options for Multiplayer Fixed

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -1,8 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/ui/modules/options/multiplayer.partial.css" />
 
-<md-content>
-
-  <md-subheader class="md-no-sticky" style="float:left">General</md-subheader>
+  <md-list-item layout="column" layout-align="start start"><p><h3>{{:: 'ui.options.general' | translate}}</h3></p></md-list-item>
 
   <md-list-item md-no-ink>
     <p>{{:: 'ui.options.multiplayer.showAdvancedOptions' | translate }}</p>
@@ -227,4 +225,3 @@
       <md-icon class="material-icons">check</md-icon> {{ ::'ui.multiplayer.clear' | translate }}
     </md-button>
   </md-list-item>-->
-</md-content>
