Fix for Mainmenu Loading

--- a/ui/entrypoints/main_0.26/index.html
+++ b/ui/entrypoints/main_0.26/index.html
@@ -87,7 +87,7 @@
   <script src="/ui/modules/gameContext/gameContext.js"></script>
   <script src="/ui/modules/bigmap/bigmap.js"></script>
 
-  <script src="/ui/modules/mainmenu/mainmenu.js"></script>
+  <script src="/ui/modules/mp_mainmenu/mainmenu.js"></script>
   <script src="/ui/modules/menu/menu.js"></script>
   <script src="/ui/modules/onlineFeatures/online.js"></script>
   <script src="/ui/modules/career/career.js"></script>
@@ -118,7 +118,7 @@
 
   <link rel="stylesheet" type="text/css" href="/ui/lib/int/ui-components/bng-components.css">
 
-  <link type="text/css" rel="stylesheet" href="/ui/entrypoints/main_0.26/main.css">
+  <link type="text/css" rel="stylesheet" href="/ui/entrypoints/main/main.css">
   <link type="text/css" rel="stylesheet" href="/ui/lib/ext/keys.css">
   <link type="text/css" rel="stylesheet" href="/ui/modules/mainmenu/mainmenu.css">
   <link type="text/css" rel="stylesheet" href="/ui/modules/menu/menu.css" />
