--- a/ui/modules/vehicleconfig/partial.parts.html
+++ b/ui/modules/vehicleconfig/partial.parts.html
@@ -144,6 +144,7 @@
           <md-tooltip md-direction="top">{{:: 'ui.vehicleconfig.applyLicensePlate' | translate}}</md-tooltip>
         </md-button>
       </form>
+
     </div>
     <div layout="row" layout-align="start center" class="md-padding" style="flex: 0 0 auto; padding-top:0;">
       <div flex>
@@ -152,11 +153,13 @@
           {{:: 'ui.vehicleconfig.applyPartChangesAutomatically' | translate}}
         </md-checkbox>
       </div>
-      <md-button ng-click="vehConf_parts.write()" md-no-ink ng-show="!vehConf_parts.applyPartChangesAutomatically"
+      <!--<md-button ng-click="vehConf_parts.write()" md-no-ink ng-show="!vehConf_parts.applyPartChangesAutomatically"
         class="md-raised md-primary">
         {{:: 'ui.common.apply' | translate}}
+      </md-button>-->
+      <md-button ng-hide="!vehConf_parts.isMPSession" ng-click="vehConf_parts.mpapply()" md-no-ink class="md-raised md-primary">
+        {{ :: 'ui.common.sync' | translate}}
       </md-button>
-
       <md-button ng-click="vehConf_parts.reset()" md-no-ink class="md-raised md-warn">
         {{:: 'ui.common.reset' | translate}}
       </md-button>
