--- a/ui/entrypoints/main_0.25/index.html
+++ b/ui/entrypoints/main_0.25/index.html
@@ -53,7 +53,7 @@
   <link type="text/css" rel="stylesheet" href="/ui/lib/ext/chartist.min.css">
 
   <!-- BeamNG UI -->
-  <script src="/ui/entrypoints/main/main.js"></script>
+  <script src="/ui/entrypoints/main_0.25/main.js"></script>
 
   <script src="/ui/lib/int/beamng-core.js"></script>
   <script src="/ui/lib/int/utilities.js"></script>
@@ -87,7 +87,7 @@
   <script src="/ui/modules/gameContext/gameContext.js"></script>
   <script src="/ui/modules/bigmap/bigmap.js"></script>
 
-  <script src="/ui/modules/mainmenu/mainmenu.js"></script>
+  <script src="/ui/modules/mp_mainmenu/mainmenu.js"></script>
   <script src="/ui/modules/menu/menu.js"></script>
   <script src="/ui/modules/onlineFeatures/online.js"></script>
 
